[package]
name = "ngram_polars"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "ngram_polars"
crate-type = ["cdylib"]

[dependencies]
ngram_rs = { path = "../ngram_rs" }
pyo3 = {version = "0.26" ,  features = ["extension-module", "generate-import-lib"] }
pyo3-polars = {version = "0.25.0" ,  features = ["derive"] }
serde = {version = "*" ,  features = ["derive"] }
polars = { version = "0.52.0", default-features = false, features=[] }
