[build-system]
requires = ["maturin==1.9.6"]
build-backend = "maturin"

[project]
name = "ngram_polars"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark"]
